--- a/templates/nginx_logs_tables.sql.j2
+++ b/templates/nginx_logs_tables.sql.j2
@@ -1,4 +1,4 @@
-CREATE TABLE IF NOT EXISTS logs.logs_table (
+CREATE TABLE IF NOT EXISTS {{ database_name }}.{{ table_name }} (
     message String  
 )
 ENGINE = Log
